fix: remove scrollbar on 404

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -114,3 +114,7 @@ body {
         opacity: 1;
     }
 }
+
+html, body, #__next {
+    height: 100%;
+}
